syntax = "proto3";

package nearby_stops;

service NearbyStopsService {
  rpc GetNearbyStops (NearbyStopsRequest) returns (NearbyStopsReply);
}

message NearbyStopsRequest {
  // TODO: GRPC - Add user location
}

message NearbyStopsReply {
  // TODO: GRPC - Add nearby stops
}
